libs/components/validation/src/lib/modules/email-validation/fixtures/email-validation.component.fixture.ts
import { ChangeDetectionStrategy, Component } from '@angular/core';

@Component({
  selector: 'sky-test-cmp',
  templateUrl: './email-validation.component.fixture.html',
  changeDetection: ChangeDetectionStrategy.Eager,
  standalone: false,
})
export class EmailValidationTestComponent {
  public emailValidator: string | undefined;
}
